--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -177,7 +177,7 @@
 
 </form>
 
-<form style="display:inline-block; padding-left:40px"  action="/show" method="post">
+<form style="display:inline-block; padding-left:40px"  action="/show/" method="post">
 
         <div
             <input type='hidden'  name="chat_id" value={{chat_id}} />
