--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -6,6 +6,7 @@
 
     <script>
         $(document).ready(function(){
+            alert ({{chat_id}});
             <!--csrf-token for ajax request-->
              var csrft = jQuery("[name=csrfmiddlewaretoken]").val();
 
@@ -94,6 +95,7 @@
             <!--show users of private chat-->
             var content = '';
             var chat_id = {{chat_id}};
+            alert (chat_id);
             $('#btnShow').click( function(event){
                 content = '';
                 $("#modal_form_text").text("Members of this private chat")
