--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -158,7 +158,7 @@
 {% endblock %}
 {% block content %}
 
-<p style="color:blue"> Private Chat Name:<strong> {{chat_name}} </strong></p>
+<p style="color:blue"> Private Chat Name:<strong> {{chat_name}} </strong> Chat ID : {{chat_id}}</p>
 
 <div style="min-height: 400px; max-height: 400px; overflow-y: auto;; background-color: #f5f5f5;" id="msgArea"></div>
 
