--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -94,8 +94,9 @@
 
             <!--show users of private chat-->
             var content = '';
-            var chat_id = {{chat_id}};
-            alert (chat_id);
+            var chat_id = 1; 
+//             {{chat_id}}
+            alert ("chat_id" + chat_id);
             $('#btnShow').click( function(event){
                 content = '';
                 $("#modal_form_text").text("Members of this private chat")
