--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -29,9 +29,9 @@
 //               var webSocket = new WebSocket('wss://' + window.location.host + '/chat'+{{chat_id}}); 
               var webSocket = new ReconnectingWebSocket('wss://' + window.location.host + '/chat'+{{chat_id}});
             } else {
-              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat'+{{chat_id}});
+              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat'+1);
             };   
-
+{{chat_id}}
             webSocket.onmessage = function(message) {
                 var data = JSON.parse(message.data)
                 if (data.time == '0'){
