--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -27,11 +27,11 @@
             var elementMessage = $('#message');
             if (window.location.protocol == "https:") {
 //               var webSocket = new WebSocket('wss://' + window.location.host + '/chat'+{{chat_id}}); 
-              var webSocket = new ReconnectingWebSocket('wss://' + window.location.host + '/chat'+{{chat_id}});
+              var webSocket = new ReconnectingWebSocket('wss://' + window.location.host + '/chat');
             } else {
-              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat'+1);
+              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat');
             };   
-{{chat_id}}
+
             webSocket.onmessage = function(message) {
                 var data = JSON.parse(message.data)
                 if (data.time == '0'){
