--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -27,9 +27,9 @@
             var elementMessage = $('#message');
             if (window.location.protocol == "https:") {
 //               var webSocket = new WebSocket('wss://' + window.location.host + '/chat'+{{chat_id}}); 
-              var webSocket = new ReconnectingWebSocket('wss://' + window.location.host + '/chat');
+              var webSocket = new ReconnectingWebSocket('wss://' + window.location.host + '/chat'+{{chat_id}});
             } else {
-              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat');
+              var webSocket = new ReconnectingWebSocket('ws://' + window.location.host + '/chat'+{{chat_id}});
             };   
 
             webSocket.onmessage = function(message) {
