--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -208,13 +208,13 @@
 
 
 <!--modal form-->
-<div id="modal_form"><!-- Сaмo oкнo -->
-    <span id="modal_close">X</span> <!-- Кнoпкa зaкрыть -->
+<div id="modal_form">
+    <span id="modal_close">X</span> 
     <p id="modal_form_text">  </p>
     <div style=" max-height: 300px; overflow-y: auto;">
         <ul id="content"></ul>
     </div>
 </div>
-<div id="overlay"></div><!-- Пoдлoжкa --> -->
+<div id="overlay"></div> -->
 
 {% endblock %}
