--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -51,11 +51,11 @@
                 $('#message')[0].focus();
             })
 
-            <!--leave private chat forever-->
-            $('#btnLeave').click(function(e) {
+//             <!--leave private chat forever-->
+//             $('#btnLeave').click(function(e) {
 
-                return  confirm('Are you sure you want to leave this private chat forever?')
-            })
+//                 return  confirm('Are you sure you want to leave this private chat forever?')
+//             })
 
 //             <!--add user to private chat-->
 //             var content = '';
@@ -167,7 +167,7 @@
     <button id="btnSend">Send</button>
 </div>
 
-<br>
+<!-- <br>
 
 <form style="display:inline-block"  action="/leave/" method="post">
 
@@ -180,7 +180,7 @@
         {% csrf_token %}
 
 </form>
-
+ -->
 <!-- <form style="display:inline-block; padding-left:40px"  action="/show/" method="post">
 
         <div
