--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -167,7 +167,7 @@
     <button id="btnSend">Send</button>
 </div>
 
-<!-- <br>
+<br>
 
 <form style="display:inline-block"  action="/leave/" method="post">
 
@@ -180,8 +180,8 @@
         {% csrf_token %}
 
 </form>
- -->
-<!-- <form style="display:inline-block; padding-left:40px"  action="/show/" method="post">
+
+<form style="display:inline-block; padding-left:40px"  action="/show/" method="post">
 
         <div
             <input type='hidden'  name="chat_id" value={{chat_id}} />
@@ -215,6 +215,6 @@
         <ul id="content"></ul>
     </div>
 </div>
-<div id="overlay"></div> -->
+<div id="overlay"></div> 
 
 {% endblock %}
