--- a/templates/privat_chat.html
+++ b/templates/privat_chat.html
@@ -51,46 +51,46 @@
                 $('#message')[0].focus();
             })
 
-//             <!--leave private chat forever-->
-//             $('#btnLeave').click(function(e) {
+            <!--leave private chat forever-->
+            $('#btnLeave').click(function(e) {
 
-//                 return  confirm('Are you sure you want to leave this private chat forever?')
-//             })
+                return  confirm('Are you sure you want to leave this private chat forever?')
+            })
 
-//             <!--add user to private chat-->
-//             var content = '';
-//             var chat_id = {{chat_id}};
-//             $('#btnAdd').click( function(event){
-//                 content = '';
-//                 $("#modal_form_text").text("Select user to add")
-//                 event.preventDefault(); 
+            <!--add user to private chat-->
+            var content = '';
+            var chat_id = {{chat_id}};
+            $('#btnAdd').click( function(event){
+                content = '';
+                $("#modal_form_text").text("Select user to add")
+                event.preventDefault(); 
 
-//                 data = {"chat_id":chat_id}
-//                 jQuery.post("/users/",data, function(users_to_add){
+                data = {"chat_id":chat_id}
+                jQuery.post("/users/",data, function(users_to_add){
 
-//                     users_to_add.map((user) =>
-//                         content += '<li><a href="#" id="chat_id" onclick="add_user(' + user[0] + ');return false">' + user[1] +'</a></li>'
-//                     );
-//                     document.getElementById('content').innerHTML = content
-//                  });
-//                 $('#overlay').fadeIn(400, 
-//                     function(){ 
-//                         $('#modal_form')
-//                             .css('display', 'block') 
-//                             .animate({opacity: 1, top: '50%'}, 200); 
-//                 });
-//             });
+                    users_to_add.map((user) =>
+                        content += '<li><a href="#" id="chat_id" onclick="add_user(' + user[0] + ');return false">' + user[1] +'</a></li>'
+                    );
+                    document.getElementById('content').innerHTML = content
+                 });
+                $('#overlay').fadeIn(400, 
+                    function(){ 
+                        $('#modal_form')
+                            .css('display', 'block') 
+                            .animate({opacity: 1, top: '50%'}, 200); 
+                });
+            });
             
-//             $('#modal_close, #overlay').click( function(){ 
-//                 content = '';
-//                 $('#modal_form')
-//                     .animate({opacity: 0, top: '45%'}, 200,  
-//                         function(){ 
-//                             $(this).css('display', 'none');
-//                             $('#overlay').fadeOut(400); 
-//                         }
-//                     );
-//             });
+            $('#modal_close, #overlay').click( function(){ 
+                content = '';
+                $('#modal_form')
+                    .animate({opacity: 0, top: '45%'}, 200,  
+                        function(){ 
+                            $(this).css('display', 'none');
+                            $('#overlay').fadeOut(400); 
+                        }
+                    );
+            });
 
 //             <!--show users of private chat-->
 //             var content = '';
