--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 <head>
 
     <!-- documentation at http://getbootstrap.com/, alternative themes at https://www.bootstrapcdn.com/bootswatch/ -->
-    <!--<link href="{% static 'bootstrap.min.css' %}" rel="stylesheet"/>-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet"/>
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/> -->
     <script type="text/javascript" src='{% static "reconnecting-websocket.min.js" %}'></script>
 
     <link href="{% static 'styles.css' %}"  rel="stylesheet">
