--- a/templates/chat.html
+++ b/templates/chat.html
@@ -45,11 +45,11 @@
 
 <div>
     <textarea style=" width:80%; vertical-align:bottom" name="message" id="message"  rows="2"></textarea>
-    {% if log %}
+<!--     {% if log %} -->
     <button id="btnSend">Send</button>
-{% else %}
+<!-- {% else %}
     <p> Only logged users can send messages </p>
-{% endif %}
+{% endif %} -->
 </div>
 
 {% endblock %}
