--- a/templates/chat.html
+++ b/templates/chat.html
@@ -45,11 +45,12 @@
 
 <div>
     <textarea style=" width:80%; vertical-align:bottom" name="message" id="message"  rows="2"></textarea>
-<!--     {% if log %} -->
     <button id="btnSend">Send</button>
-<!-- {% else %}
-    <p> Only logged users can send messages </p>
-{% endif %} -->
+    <!--     {% if log %} 
+      <button id="btnSend">Send</button>
+    {% else %}
+      <p> Only logged users can send messages </p>
+    {% endif %} -->
 </div>
 
 {% endblock %}
