--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,8 @@
    
 {% endblock %}
 {% block content %}
-<p> About </p>
-<div style="min-height: 200px; max-height: 200px; overflow-y: auto; background-color: #f5f5f5">
+<p style="color:blue"> About </p>
+<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5">
 <p>Hello! </p>
 <p>This is my first web application. It is created in Python using the Django framework, channels and websockets.</p>
 
@@ -21,8 +21,8 @@ Being in a private chat you can see who is the member of this chat and whether h
 It is especially interesting on which browsers this site does not work correctly.
 </p> 
 </div>
-<p> О сайте </p>
-<div style="min-height: 200px; max-height: 200px; overflow-y: auto; background-color: #f5f5f5">
+<p style="color:blue"> О сайте </p>
+<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5">
 
 <p>Привет!</p> 
 <p>Это мое первое веб приложение. Оно создано на языке Python с использованием фреймворка Django, channels и websockets.
