--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <p style="color:blue"> About </p>
-<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5">
+<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5; padding-left: 3px ">
 <p>Hello! </p>
 <p>This is my first web application. It is created in Python using the Django framework, channels and websockets.</p>
 
@@ -22,7 +22,7 @@ It is especially interesting on which browsers this site does not work correctly
 </p> 
 </div>
 <p style="color:blue"> О сайте </p>
-<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5">
+<div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5; padding-left: 3px ">
 
 <p>Привет!</p> 
 <p>Это мое первое веб приложение. Оно создано на языке Python с использованием фреймворка Django, channels и websockets.
