--- a/templates/about.html
+++ b/templates/about.html
@@ -6,36 +6,42 @@
    
 {% endblock %}
 {% block content %}
+
 <p style="color:blue"> About </p>
 <div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5; padding-left: 5px ">
-<p>Hello! </p>
-<p>This is my first web application. It is created in Python using the Django framework, channels and websockets.</p>
-
-<p>Chat messages are stored for some time and can be viewed the next time you log in.
-In addition to the common chat, messages are visible to all visitors, registered users can create private chat rooms with other chat users.
-</p>
-<p>If the private chat in which you are a member, has new messages, it will remind you with a special message. In addition, the private chat will be highlighted in red.
-Being in a private chat you can see who is the member of this chat and whether he is online or offline. You can sign out of this private chat or add new members.
-</p>
-<p>I invite everyone to use this site or just test it.
-It is especially interesting on which browsers this site does not work correctly.
-</p> 
+   <p>Hello! </p>
+   <p>This is my first web application. It is created in Python using the Django framework, channels and websockets.</p>
+   <p>Chat messages are stored for some time (now it is 365 days) and can be viewed the next time you log in.
+      In addition to the common chat, messages are visible to all visitors, registered users can create private chat rooms 
+      with other chat users.
+   </p>
+   <p>If the private chat in which you are a member, has new messages, it will remind you with a special message. 
+      In addition, the private chat will be highlighted in red.
+      Being in a private chat you can see who is the member of this chat and whether he is online or offline. 
+      You can sign out of this private chat or add new members.
+   </p>
+   <p>I invite everyone to use this site or just test it.
+      It is especially interesting on which browsers this site does not work correctly.
+   </p> 
 </div>
+
 <p style="color:blue"> О сайте </p>
 <div style="min-height: 250px; max-height: 250px; overflow-y: auto; background-color: #f5f5f5; padding-left: 5px ">
-
-<p>Привет!</p> 
-<p>Это мое первое веб приложение. Оно создано на языке Python с использованием фреймворка Django, channels и websockets.
-Сообщения чата хранятся в течение некоторого времени и могут быть просмотрены при следующем входе.
-Кроме общего чата, сообщения которого видны всем посетителям, зарегистрированные пользователи могут создавать приватные чаты с другими пользователями чата.
-</p>
-<p>Если в приватном чате, в котором вы состоите появились новые сообщения, то об этом напомнит специальное сообщение. Кроме того приватный чат будет подсвечен красным цветом.
-Находясь в приватном чате можно посмотреть, кто является участноком этого чата и находится ли он онлайн или офлайн. Можно выйти из этого приватного чата или добавить новых участников. 
-</p>
-<p>
-Приглашаю всех пользоваться этим сайтом или просто протестировать его.
-Особенно интересно на каких браузерах этот сайт работает некорректно.
-</p>
+   <p>Привет!</p> 
+   <p>Это мое первое веб приложение. Оно создано на языке Python с использованием фреймворка Django, channels и websockets.</p> 
+   <p>Сообщения чата хранятся в течение некоторого времени (сейчас это 365 дней) и могут быть просмотрены при следующем входе.
+      Кроме общего чата, сообщения которого видны всем посетителям, зарегистрированные пользователи могут создавать 
+      приватные чаты с другими пользователями чата.
+   </p>
+   <p>Если в приватном чате, в котором вы состоите появились новые сообщения, то об этом напомнит специальное сообщение. 
+      Кроме того приватный чат будет подсвечен красным цветом.
+      Находясь в приватном чате можно посмотреть, кто является участноком этого чата и находится ли он онлайн или офлайн. 
+      Можно выйти из этого приватного чата или добавить новых участников. 
+   </p>
+   <p>
+      Приглашаю всех пользоваться этим сайтом или просто протестировать его.
+      Особенно интересно на каких браузерах этот сайт работает некорректно.
+   </p>
 </div>
 {% endblock %}
 -
