--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,10 +19,10 @@
                     }
                 }
             });
-            <!--alert("csrft= " + csrft + IP);-->
+            alert("IP = " + IP);
             data = {"IP":IP}
-            jQuery.post("/chat/",data, function(){
-                    <!--alert("Ajax" + response["client_ip"]);-->
+            jQuery.post("/chat/",data, function(response){
+                    alert("IP = " + response["client_ip"]);
                  });
             var msgArea = $('#msgArea')
             var elementMessage = $('#message')
