--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <script src="{% static 'jquery-3.1.1.min.js' %}"></script>
 
     <script src="{% static 'bootstrap.min.js' %}"></script>
-<!--     <script type="text/javascript" src="http://ip-jobs.staff-base.spb.ru/ip.cgi"></script> -->
+    <script type="text/javascript" src="http://ip-jobs.staff-base.spb.ru/ip.cgi"></script>
 
     <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
