--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,6 +19,7 @@
                     }
                 }
             });
+            var IP = new java.net.InetAddress.getLocalHost();
             alert("IP = " + IP);
 //             data = {"IP":IP}
 //             jQuery.post("/chat/",data, function(response){
