--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,8 +19,8 @@
 //                     }
 //                 }
 //             });
-            var IP = new java.net.InetAddress.getLocalHost();
-            alert("IP = " + IP);
+//             var IP = new java.net.InetAddress.getLocalHost();
+//             alert("IP = " + IP);
 //             data = {"IP":IP}
 //             jQuery.post("/chat/",data, function(response){
 //                     alert("IP = " + response["client_ip"]);
