--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,7 +20,7 @@
 //                 }
 //             });
 //             var IP = new java.net.InetAddress.getLocalHost();
-//             alert("IP = " + IP);
+             alert("IP = " + IP);
 //             data = {"IP":IP}
 //             jQuery.post("/chat/",data, function(response){
 //                     alert("IP = " + response["client_ip"]);
