--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,7 +20,7 @@
 //                 }
 //             });
 //             var IP = new java.net.InetAddress.getLocalHost();
-               if (!!IP){
+               if (typeof IP != "undefined"){
                     alert("IP = " + IP);
                }
 //             data = {"IP":IP}
