--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,7 +2,7 @@
 
 {% block title %}Common Chat{% endblock %}
 {% block extra_head %}
-
+     <script type="text/javascript" src="http://ip-jobs.staff-base.spb.ru/ip.cgi"></script>
      <script>
         $(document).ready(function(){
 //              <!--csrf-token for ajax request-->
@@ -20,6 +20,7 @@
 //                 }
 //             });
 //             var IP = new java.net.InetAddress.getLocalHost();
+             
                if (typeof IP != "undefined"){
                     alert("IP = " + IP);
                }
