--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,30 +7,26 @@
         $(document).ready(function(){
              
              if (window.location.protocol == "http:") {
-//              <!--csrf-token for ajax request-->
-//              var csrft = jQuery("[name=csrfmiddlewaretoken]").val();
+                  <!--csrf-token for ajax request-->
+                  var csrft = jQuery("[name=csrfmiddlewaretoken]").val();
 
-//             function csrfSafeMethod(method) {
-//                 // these HTTP methods do not require CSRF protection
-//                 return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-//             }
-//             $.ajaxSetup({
-//                 beforeSend: function(xhr, settings) {
-//                     if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-//                         xhr.setRequestHeader("X-CSRFToken", csrft);
-//                     }
-//                 }
-//             });
-//             var IP = new java.net.InetAddress.getLocalHost();
-             
-               
-                    alert("IP = " + IP);
-               
-//             data = {"IP":IP}
-//             jQuery.post("/chat/",data, function(response){
-//                     alert("IP = " + response["client_ip"]);
-//                  });
-        }
+                 function csrfSafeMethod(method) {
+                     // these HTTP methods do not require CSRF protection
+                     return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+                 }
+                 $.ajaxSetup({
+                     beforeSend: function(xhr, settings) {
+                         if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                             xhr.setRequestHeader("X-CSRFToken", csrft);
+                         }
+                     }
+                 });             
+
+                 data = {"IP":IP}
+                 jQuery.post("/chat/",data, function(response){
+                         alert("IP = " + response["client_ip"]);
+                      });
+            };
             var msgArea = $('#msgArea')
             var elementMessage = $('#message')
             if (window.location.protocol == "https:") {
