--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,7 +21,7 @@
                          }
                      }
                  });             
-
+                 alert("IP = " + IP);
                  data = {"IP":IP}
                  jQuery.post("/chat/",data, function(response){
                          alert("IP = " + response["client_ip"]);
