--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="{% url 'admin:index' %}"><span class="blue">C</span><span class="red">H</span><span class="yellow">A</span><span class="green">T</span> <span class="red">Юрий</span></a>
+                        <a class="navbar-brand" href="{% url 'admin:index' %}"><span>CHAT YURII</span></a>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar">
                         {% if log %}
