--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,9 @@
 
     <link href="{% static 'styles.css' %}"  rel="stylesheet">
 
-
     <script src="{% static 'jquery-3.1.1.min.js' %}"></script>
 
     <script src="{% static 'bootstrap.min.js' %}"></script>
-    
 
     <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
@@ -22,13 +20,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="{% static 'html5shiv.js' %}"></script>
-  <script src="{% static 'respond.min.js' %}"></script>
-<![endif]-->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    	<script src="{% static 'html5shiv.js' %}"></script>
+  	<script src="{% static 'respond.min.js' %}"></script>
+    <![endif]-->
 
-	{% block extra_head %}{% endblock %}
+    {% block extra_head %}{% endblock %}
 </head>
 <body>
 	<div class="container">
@@ -42,8 +40,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-
-                        <a class="navbar-brand" href="{% url 'admin:index' %}"><span>MULTICHAT</span></a>
+			{% if log and { username } == "superuser" %}
+                        	<a class="navbar-brand" href="{% url 'admin:index' %}"><span>MULTICHAT</span></a>
+			{% endif %}    
                     </div>
                     <div class="collapse navbar-collapse" id="navbar">
                         {% if log %}
