--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-			{% if log and { username } == "superuser" %}
+			{% if log and username == "superuser" %}
                         	<a class="navbar-brand" href="{% url 'admin:index' %}"><span>MULTICHAT</span></a>
 			{% endif %}    
                     </div>
