--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 			{% if log and username == "superuser" %}
                             <a class="navbar-brand" href="{% url 'admin:index' %}"><span>ADMIN</span></a>
 			{%else%}
-			    <span>MULTICHAT</span>
+			     <a class="navbar-brand"><span>MULTICHAT</span></a>
 			{% endif %}    
                     </div>
                     <div class="collapse navbar-collapse" id="navbar">
